# mcp-email-client

./: .gitignore  README.md  emails.duckdb  mail.py  mailclient.py  pyproject.toml  run_mcp_server.py
config/: new_name.json
src/mcp_email_client/: mailhandler.py  semantic.py  server.py
tests/: test_db.py  test_semantic.py
